@@ -322,6 +322,7 @@ void command_augmentitem(Client *c, const Seperator *sep);
 void command_questerrors(Client *c, const Seperator *sep);
 void command_enablerecipe(Client *c, const Seperator *sep);
 void command_disablerecipe(Client *c, const Seperator *sep);
+void command_showspellslist(Client *c, const Seperator *sep);
 
 #ifdef EQPROFILE
 void command_profiledump(Client *c, const Seperator *sep);
